Update settings structure for v0.2

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -1,7 +1,6 @@
-[ 
-    {
-        "name": "Atlantis",
-        "version": "0.1",
+{ 
+    "Atlantis":{
+        "version": "0.2",
         "url": "",
         "ssid": "",
         "mac": "",
@@ -11,36 +10,32 @@
         "long": -1.679268,
         "radius": 10
     },
-    {
-        "name": "Notification",
+    "Notification":{
         "key": ""
     },
-    {
-        "name": "Silence",
+    "Files":{
+        "doc":"",
+        "images":"",
+        "videos":"",
+        "music":""
+    },
+    "Silence":{
         "on":false,
         "H1": 6,
         "H2": 23
     },
-    {
-        "name": "Zwave",
+    "Zwave":{
         "IP":"",
         "Port":""
     },
-    {
-        "name": "Arduino",
-        "Port":"",
-        "IP":""
-    },
-    {
-    	"name": "Hue",
+    "Hue":{
     	"ip": "",
     	"user": ""
     },
-    {
-    	"name": "Alarm",
+    "Alarm":{
     	"status": false,
     	"motion":true,
     	"door":true,
     	"tamper":true
     }
-]
+}
