--- a/Server/Webapp/bower.json
+++ b/Server/Webapp/bower.json
@@ -8,12 +8,9 @@
     "angular-utf8-base64": "~0.0.5",
     "ngstorage": "~0.3.6",
     "bootstrap-material-design": "~0.3.0",
-    "nouislider": "~7.0.10",
-    "angular-nouislider": "~0.3.1",
     "angular-route": "~1.4.1",
-    "angular-material": "~0.10.0",
+    "angular-material": "~0.10.1",
     "angular-sanitize": "~1.4.1",
-    "angular-modal-service": "~0.6.6",
     "ng-file-upload": "~5.0.9"
   },
   "devDependencies": {
@@ -22,7 +19,6 @@
   "appPath": "app",
   "moduleName": "atlantisWebAppApp",
   "resolutions": {
-    "angular": "^1.3.0 || >1.4.0-beta.0",
-    "nouislider": "~7.0.10"
+    "angular": "^1.3.0 || >1.4.0-beta.0"
   }
 }
