--- a/Server/Webapp/package.json
+++ b/Server/Webapp/package.json
@@ -1,7 +1,10 @@
 {
   "name": "atlantiswebapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-google-cdn": "^0.4.3"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
