--- a/Server/Webapp/bower.json
+++ b/Server/Webapp/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "~1.4.1",
     "angular-material": "~0.10.1",
     "angular-sanitize": "~1.4.1",
-    "ng-file-upload": "~5.0.9"
+    "ng-file-upload": "~5.0.9",
+    "angular-chart.js": "~0.8.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
