--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -29,6 +29,7 @@ android {
     buildToolsVersion "22.0.1"
 
     compileOptions {
+        encoding "UTF-8"
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
