--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'android'
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -22,6 +23,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
 }
 
 android {
