--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="0.2" >
 
     <uses-sdk
-        android:minSdkVersion="19"
+        android:minSdkVersion="17"
         android:targetSdkVersion="22" />
 
     <permission
@@ -37,6 +37,10 @@
 
     <uses-permission android:name="fr.nawrasg.atlantis.permission.C2D_MESSAGE" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18"/>
 
     <application
         android:allowBackup="true"
@@ -91,6 +95,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name="org.achartengine.GraphicalActivity" />
+
         <receiver
             android:name=".other.RingingReceiver">
         </receiver>
