--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
+    compile 'com.github.citux:datetimepicker:0.1.2'
 }
 
 android {
