Update daemon settings

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -39,7 +39,8 @@
     	"tamper":true
     },
     "Daemon":{
-    	"pid":-1
+    	"pid":-1,
+    	"stop":false
     },
     "Weather":{
     	"appid":""
