--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -70,6 +70,7 @@
 
         <service android:name=".other.GCMService"/>
         <service android:name=".other.WifiService"/>
+        <service android:name=".other.GeoService"/>
 
         <receiver android:name=".other.GeoReceiver">
             <intent-filter>
