--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="fr.nawrasg.atlantis"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="7"
-          android:versionName="0.3">
+<manifest
+    package="fr.nawrasg.atlantis"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="7"
+    android:versionName="0.3">
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -92,9 +93,12 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".other.RingingReceiver">
-        </receiver>
+        <receiver android:name=".other.RingingReceiver"/>
+
+        <provider
+            android:name="fr.nawrasg.atlantis.other.AtlantisContentProvider"
+            android:authorities="fr.nawrasg.atlantis.provider"
+            android:exported="true"/>
     </application>
 
 </manifest>
