Add CallNotifier settings

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -40,5 +40,12 @@
     },
     "Weather":{
     	"appid":""
+    },
+    "CallNotifier":{
+    	"status":false,
+    	"light":false,
+    	"voice":false,
+    	"caller":false,
+    	"message":false
     }
 }
