--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -47,5 +47,13 @@
     	"voice":false,
     	"caller":false,
     	"message":false
+    },
+    "SMTP":{
+    	"server":"",
+    	"port":-1,
+    	"security":"no",
+    	"auth":false,
+    	"username":"",
+    	"password":""
     }
 }
