Add from name/mail

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -54,6 +54,8 @@
     	"security":"no",
     	"auth":false,
     	"username":"",
-    	"password":""
+    	"password":"",
+    	"fromName":"",
+    	"fromMail":""
     }
 }
