--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
     compile 'com.github.citux:datetimepicker:0.1.2'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
 }
 
 android {
