Disable missing translation error

--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -39,6 +39,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    buildTypes {
+        lintOptions{
+            disable 'MissingTranslation'
+        }
+    }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
