--- a/Server/Webapp/bower.json
+++ b/Server/Webapp/bower.json
@@ -2,14 +2,14 @@
   "name": "atlantis-web-app",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "1.4.8",
     "bootstrap": "^3.2.0",
     "ngmap": "~1.7.11",
     "angular-utf8-base64": "~0.0.5",
     "ngstorage": "~0.3.6",
     "bootstrap-material-design": "~0.3.0",
     "angular-route": "~1.4.1",
-    "angular-material": "~0.11.0",
+    "angular-material": "1.0.1",
     "angular-sanitize": "~1.4.1",
     "ng-file-upload": "~5.0.9",
     "angular-chart.js": "~0.8.4"
@@ -20,6 +20,6 @@
   "appPath": "app",
   "moduleName": "atlantisWebAppApp",
   "resolutions": {
-    "angular": "^1.3.0 || >1.4.0-beta.0"
+    "angular": "1.4.8"
   }
 }
