--- a/Server/Webapp/bower.json
+++ b/Server/Webapp/bower.json
@@ -12,7 +12,8 @@
     "angular-material": "1.0.1",
     "angular-sanitize": "~1.4.1",
     "ng-file-upload": "~5.0.9",
-    "angular-chart.js": "~0.8.4"
+    "angular-chart.js": "~0.8.4",
+    "angular-translate": "~2.8.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
