--- a/Server/Webapp/bower.json
+++ b/Server/Webapp/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "~1.4.1",
     "ng-file-upload": "~5.0.9",
     "angular-chart.js": "~0.8.4",
-    "angular-translate": "~2.8.1"
+    "angular-translate": "~2.8.1",
+    "angular-ui-ace": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
