Add DDNS option

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -69,5 +69,11 @@
     "Audio":{
     	"source":1,
     	"welcome":6
+    },
+    "DDNS":{
+    	"on":false,
+    	"host":"",
+    	"username":"",
+    	"password":""
     }
 }
