Add ownCloud settings

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -75,5 +75,10 @@
     	"host":"",
     	"username":"",
     	"password":""
+    },
+    "ownCloud":{
+    	"path":"",
+    	"username":"",
+    	"password":""
     }
 }
