Add DDNS last ip setting

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -74,7 +74,8 @@
     	"on":false,
     	"host":"",
     	"username":"",
-    	"password":""
+    	"password":"",
+    	"last_ip":""
     },
     "ownCloud":{
     	"path":"",
