--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -29,6 +29,7 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
     <uses-feature android:name="android.hardware.sensor.accelerometer"/>
     <uses-feature
@@ -115,8 +116,7 @@
                 android:resource="@xml/authenticator"/>
         </service>
         <service android:name=".other.SyncService"
-            android:exported="true"
-            android:process=":sync">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
