--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -30,6 +30,7 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature android:name="android.hardware.sensor.accelerometer"/>
     <uses-feature
@@ -137,6 +138,7 @@
             <meta-data android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter"/>
         </service>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
 
         <!-- Providers -->
         <provider
