Add Zwave username/password

--- a/Server/backend/classes/settings.json
+++ b/Server/backend/classes/settings.json
@@ -21,7 +21,9 @@
     },
     "Zwave":{
         "IP":"",
-        "Port":""
+        "Port":"",
+        "username":"",
+        "password":""
     },
     "Hue":{
     	"ip": "",
