--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -60,7 +60,7 @@
 
         <!-- Activities -->
         <activity
-            android:name=".MainFragmentActivity"
+            android:name=".activities.MainFragmentActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop">
@@ -69,7 +69,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".activities.SettingsActivity" />
 
         <!-- Widget Config Activities -->
         <activity android:name=".widgets.config.DoorLockWidgetConfigActivity">
