--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -60,7 +60,7 @@
 
         <!-- Activities -->
         <activity
-            android:name=".activities.MainFragmentActivity"
+            android:name=".activities.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop">
