--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:value="@integer/google_play_services_version"/>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="API_KEY"/>
+            android:value="@string/api_google_maps"/>
         <meta-data
             android:name="com.lge.support.SPLIT_WINDOW"
             android:value="true"/>
