--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -74,6 +74,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.SettingsActivity"/>
+        <activity android:name=".activities.IntroActivity"/>
 
         <!-- Widget Config Activities -->
         <activity android:name=".widgets.config.DoorLockWidgetConfigActivity">
