--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -131,6 +131,16 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_scenario"/>
         </receiver>
+        <receiver
+            android:name=".widgets.AlarmWidgetProvider"
+            android:label="@string/widget_alarm_label">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_alarm"/>
+        </receiver>
 
         <!-- Services -->
         <service android:name=".services.GCMService"/>
