--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -48,6 +48,7 @@
     <uses-permission android:name="fr.nawrasg.atlantis.permission.C2D_MESSAGE"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/home"
         android:label="@string/app_name"
